deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask
  namespace: test-namespace
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask
  template:
    metadata:
      labels:
        app: flask
    spec:
      containers:
        - name: flask
          image: docker.io/library/flask-test-gitops:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
