service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask
  namespace: test-namespace
spec:
  selector:
    app: flask
  ports:
    - protocol: TCP
      port: 5000
