ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask
  namespace: test-namespace
spec:
  rules:
    - http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: flask
              port:
                number: 5000
